--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,8 +12,6 @@ target 'Excersice_2' do
     :hermes_enabled => false
   )
 
-  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
-
   target 'Excersice_2Tests' do
     inherit! :complete
     # Pods for testing
@@ -23,7 +21,7 @@ target 'Excersice_2' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
-  use_flipper!()
+  # use_flipper!()
 
   post_install do |installer|
     react_native_post_install(installer)
